feat: 신고, 제재 관리 기능 전면 리팩터링
신고 생성/조회/상태 변경 API를 Duration·UUID 기반 DTO, Enum, 페이징 응답으로 재구성
엔티티, 서비스, 컨트롤러, Swagger 검증 및 권한/중복 로직 정비